Use Files.readString instead of readAllBytes in SourceFile's allText() method